<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">LeftCenterRight</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="roll">Roll</string>
	<string name="NameDisplayLabel">Name</string>
	<string name="ScoreDisplayLabel">Score</string>
	<string name="NameLabel">0</string>
	<string name="ScoreLabel">0</string>
	<string name="CenterLabel">0</string>
	<string name="Die1Label">*</string>
	<string name="Die2Label">*</string>
	<string name="Die3Label">*</string>
	<string name="wassup">Wassup everyone!</string>
	<string name="how_many_players">How many (2 min 7 max) players?</string>
	<string name="who_is">Who is player </string>
	<string name="OK_button">OK</string>
	<string name="result">Welcome!</string>
	<string name="center">Center</string>
	<string name="continue_button">Continue</string>
	<string name="playerNumberText">0</string>
	<string name="newGame">New Game</string>
	<string name="loadGame">Load Game</string>
	<string name="quit">Save game before quitting?</string>
	<string name="save">Save</string>
	
</resources>