<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".IntroActivity" >

    <TextView
        android:id="@+id/NameLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView2"
        android:layout_below="@+id/textView2"
        android:layout_marginTop="20dp"
        android:text="@string/NameLabel"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/ScoreLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/ScoreDisplayLabel"
        android:layout_below="@+id/ScoreDisplayLabel"
        android:text="@string/ScoreLabel"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/NameDisplayLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/ScoreLabel"
        android:layout_alignParentLeft="true"
        android:text="@string/NameDisplayLabel"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/ScoreDisplayLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:text="@string/ScoreDisplayLabel"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/CenterDisplayLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:layout_centerHorizontal="true"
        android:text="@string/center"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/CenterLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/CenterDisplayLabel"
        android:layout_centerHorizontal="true"
        android:text="@string/CenterLabel"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/ResultLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/result"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor = "#224349"/>

    <Button
        android:id="@+id/rollbutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:text="@string/roll" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/rollbutton"
        android:layout_marginBottom="20dp"
        android:layout_centerHorizontal="true"
        android:src="@drawable/nothing" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/rollbutton"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="160dp"
        android:src="@drawable/nothing" />

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/rollbutton"
        android:layout_marginBottom="300dp"
        android:layout_centerHorizontal="true"
        android:src="@drawable/nothing" />
    
</RelativeLayout>