<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/wassupLabel"
        android:layout_width="278dp"
        android:layout_height="wrap_content"
        android:text="@string/wassup"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/HowManyLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/how_many_players"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/numberPlayers"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="number" />

    <TextView
        android:id="@+id/whoIsLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/who_is"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <EditText
        android:id="@+id/playerNameField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10" >

        <requestFocus />
    </EditText>

    <Button
        android:id="@+id/OKButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/OK_button" />

</LinearLayout>